fixed spacing in profile

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -91,15 +91,6 @@ h1{
     font-size: 2.5rem;
   }
 
-  main{
-    display:flex;
-    flex: 1 0 auto;
-    flex-wrap: wrap;
-    padding-top: 30px;
-
-  }
-
-
   .profile-info {
     background: #ffffff;
     padding: 20px 20px;
@@ -124,6 +115,15 @@ h1{
     border-radius: 3px;
     margin-bottom: 20px;
     margin-top: 30px;
+  }
+
+  /* Divs */
+
+  main{
+    display:flex;
+    flex-wrap: wrap;
+    padding-top: 30px;
+
   }
 
   .oneDiv {
@@ -164,7 +164,7 @@ h1{
 
   footer {
     display: flex;
-    flex-shrink: 0;
+    margin-top: auto;
     justify-content: center;
   }
   footer p {
